# agent_os

./: .gitignore  AGENT.md  README.md  hermes_agent_architecture_blueprint.md  pyproject.toml  required.md
agent_os/: __init__.py  cache_stability.py  cli.py  compression.py  config.py  context.py  logging_utils.py  memory.py  model_client.py  runtime.py  session_manager.py  skills.py  storage.py  types.py
agent_os/interfaces/: __init__.py  terminal.py
agent_os/tools/: __init__.py  artifacts.py  context.py  delegate.py  files.py  memory.py  registry.py  shell.py  skills.py  todo.py  web.py
scripts/: probe_kv_cache.py  smoke_fake_runtime.py  smoke_openai_compatible.py
tests/: test_runtime.py
